grpc: add update user
